dist/logs/DaemonSet.prod-vector.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/component: Agent
    app.kubernetes.io/instance: prod
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vector
    app.kubernetes.io/version: 0.58.0-distroless-libc
    helm.sh/chart: vector-0.58.0
  name: prod-vector
  namespace: logs
spec:
  minReadySeconds: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: Agent
      app.kubernetes.io/instance: prod
      app.kubernetes.io/name: vector
  template:
    metadata:
      labels:
        app.kubernetes.io/component: Agent
        app.kubernetes.io/instance: prod
        app.kubernetes.io/name: vector
        vector.dev/exclude: "true"
    spec:
      containers:
        - args:
            - -w
            - --config-dir
            - /etc/vector/
          image: docker.io/timberio/vector:0.58.0-distroless-libc
          imagePullPolicy: IfNotPresent
          name: vector
          ports:
            - containerPort: 9090
              name: prom-exporter
              protocol: TCP
          resources:
            limits:
              cpu: 400m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 128Mi
          volumeMounts:
            - mountPath: /vector-data-dir
              name: data
            - mountPath: /etc/vector/
              name: config
              readOnly: true
            - mountPath: /var/log/
              name: var-log
              readOnly: true
            - mountPath: /var/lib
              name: var-lib
              readOnly: true
            - mountPath: /host/proc
              name: procfs
              readOnly: true
            - mountPath: /host/sys
              name: sysfs
              readOnly: true
      dnsPolicy: ClusterFirst
      serviceAccountName: prod-vector
      terminationGracePeriodSeconds: 60
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
        - effect: NoExecute
          key: k3s-controlplane
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
        - effect: NoSchedule
          key: node.kubernetes.io/disk-pressure
          operator: Exists
        - effect: NoSchedule
          key: node.kubernetes.io/memory-pressure
          operator: Exists
        - effect: NoSchedule
          key: node.kubernetes.io/pid-pressure
          operator: Exists
        - effect: NoSchedule
          key: node.kubernetes.io/unschedulable
          operator: Exists
      volumes:
        - name: config
          projected:
            sources:
              - configMap:
                  name: vector-vl-config
        - hostPath:
            path: /var/lib/vector
          name: data
        - hostPath:
            path: /var/log/
          name: var-log
        - hostPath:
            path: /var/lib/
          name: var-lib
        - hostPath:
            path: /proc
          name: procfs
        - hostPath:
            path: /sys
          name: sysfs
