dist/logs/StatefulSet.prod-victoria-logs-single-server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: prod
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-logs-single
    app.kubernetes.io/version: v1.53.0
    helm.sh/chart: victoria-logs-single-0.13.10
  name: prod-victoria-logs-single-server
  namespace: logs
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app: server
      app.kubernetes.io/instance: prod
      app.kubernetes.io/name: victoria-logs-single
  serviceName: prod-victoria-logs-single-server
  template:
    metadata:
      labels:
        app: server
        app.kubernetes.io/component: server
        app.kubernetes.io/instance: prod
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: victoria-logs-single
    spec:
      containers:
        - args:
            - --delete.enable
            - --envflag.enable
            - --envflag.prefix=VM_
            - --http.shutdownDelay=15s
            - --httpListenAddr=:9428
            - --loggerFormat=json
            - --maxConcurrentInserts=32
            - --memory.allowedPercent=80
            - --retention.maxDiskSpaceUsageBytes=75GiB
            - --retentionPeriod=3
            - --storageDataPath=/storage
            - --syslog.listenAddr.tcp=:1514
            - --syslog.listenAddr.udp=:1514
            - --syslog.timezone=America/Chicago
          image: victoriametrics/victoria-logs:v1.53.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 30
            periodSeconds: 30
            tcpSocket:
              port: http
            timeoutSeconds: 5
          name: vlogs
          ports:
            - containerPort: 9428
              name: http
            - containerPort: 1514
              name: syslog-tcp
            - containerPort: 1514
              name: syslog-udp
              protocol: UDP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 2000m
              memory: 3Gi
            requests:
              cpu: 400m
              memory: 3Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /storage
              name: server-volume
      securityContext:
        fsGroup: 2000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        runAsUser: 1000
      terminationGracePeriodSeconds: 60
  updateStrategy: {}
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: server-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 80Gi
        storageClassName: ceph-rbd
