dist/logs/Service.prod-vector-headless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: Agent
    app.kubernetes.io/instance: prod
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vector
    app.kubernetes.io/version: 0.58.0-distroless-libc
    helm.sh/chart: vector-0.58.0
  name: prod-vector-headless
  namespace: logs
spec:
  clusterIP: None
  ports: []
  selector:
    app.kubernetes.io/component: Agent
    app.kubernetes.io/instance: prod
    app.kubernetes.io/name: vector
  type: ClusterIP
