dist/logs/Service.prod-victoria-logs-single-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: prod
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-logs-single
    app.kubernetes.io/version: v1.53.0
    helm.sh/chart: victoria-logs-single-0.13.10
  name: prod-victoria-logs-single-server
  namespace: logs
spec:
  clusterIP: None
  ports:
    - name: http
      port: 9428
      protocol: TCP
      targetPort: http
    - name: syslog-tcp
      port: 1514
      protocol: TCP
      targetPort: syslog-tcp
    - name: syslog-udp
      port: 1514
      protocol: UDP
      targetPort: syslog-udp
  selector:
    app: server
    app.kubernetes.io/instance: prod
    app.kubernetes.io/name: victoria-logs-single
  type: ClusterIP
