dist/logs/Service.syslog.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.kubernetes.io/hostname: syslog.cmdcentral.xyz
  name: syslog
  namespace: logs
spec:
  ports:
    - name: tcp
      port: 514
      protocol: TCP
      targetPort: 1514
    - name: udp
      port: 514
      protocol: UDP
      targetPort: 1514
  selector:
    app: server
    app.kubernetes.io/instance: prod
    app.kubernetes.io/name: victoria-logs-single
  type: LoadBalancer
